@@ -19,6 +19,8 @@ public class PostDetailDto {
     private String title;
     private String content;
     private Category category;
+    // 이미지 업로드 시 필요
+    //private List<String> images = new ArrayList<>();
     private List<ImageDto> images = new ArrayList<>();
     private int viewCount;
     private int likeCount;
@@ -35,8 +37,13 @@ public class PostDetailDto {
                 ? post.getCreatedAt()
                 : post.getUpdatedAt();
 
+        // 이미지 업로드 시 필요
+        /*
         this.images = post.getImages().stream()
-                .map(image -> new ImageDto(image.getImageSrc()))  // ImageDto 생성
-                .collect(Collectors.toList());
+                .map(Image::getImageSrc).toList();
+         */
+        this.images = post.getImages().stream()
+                .map(ImageDto::new)
+                .toList();
     }
 }
